# nerdd-link

./: .pre-commit-config.yaml  CHANGELOG.md  Dockerfile.nerdd-process-jobs  Dockerfile.nerdd-process-jobs.dev  Dockerfile.nerdd-serialize-jobs  Dockerfile.nerdd-serialize-jobs.dev  Dockerfile.processing  Dockerfile.serialization  README.md  environment.yml  environment2.yml  environment_processing.yml  environment_serialization.yml  pyproject.toml  requirements_processing.txt  requirements_serialization.txt  setup.py
.github/workflows/: build-container-processing.yml  build-container-serialization.yml  pypi.yml  qc.yml  release.yml  test.yml
nerdd_kafka/actions/: predict_checkpoints_action.py
nerdd_kafka/channels/: channel.py
nerdd_link/: __init__.py  _plugin.py
nerdd_link/actions/: __init__.py  action.py  predict_checkpoints_action.py  process_jobs_action.py  register_module_action.py  serialize_job_action.py  supervise_actions.py  write_output_action.py
nerdd_link/channels/: __init__.py  aio_kafka_channel.py  channel.py  confluent_kafka_channel.py  kafka_channel.py  memory_channel.py
nerdd_link/cli/: __init__.py  get_storage.py  initialize_system.py  run_job_server.py  run_prediction_server.py  run_serialization_server.py  validate_storage_options.py
nerdd_link/converters/: __init__.py  image_converter.py  mol_pickle_converter.py  mol_to_image_converter.py  pickle_converter.py  problem_list_converter.py  source_list_converter.py
nerdd_link/delegates/: __init__.py  predict_checkpoint_model.py  read_checkpoint_model.py  read_pickle_step.py  topic_writer.py
nerdd_link/files/: file_system.py
nerdd_link/input/: __init__.py  structure_json_reader.py
nerdd_link/output/: __init__.py  channel_writer.py  pickle_writer.py
nerdd_link/steps/: __init__.py  add_record_id_step.py  postprocess_from_config_step.py  read_pickle_step.py  replace_large_properties_step.py  split_and_merge_step.py  wrap_results_step.py  write_checkpoints_step.py
nerdd_link/storage/: __init__.py  chained_storage.py  file_system_storage.py  mirrored_storage.py  s3_storage.py  storage.py  wrong_prefix_error.py
nerdd_link/tests/: __init__.py  async_step.py  channels.py
nerdd_link/types/: __init__.py
nerdd_link/utils/: __init__.py  async_to_sync.py  batched.py  run_pipeline.py  safetee.py
tests/: conftest.py
tests/basic/: test_channel.py  test_get_storage.py  test_memory_channel.py  test_mirrored_storage.py  test_pickle_writer.py  test_plugin.py  test_storage.py  test_structure_json_reader.py  test_supervise_actions.py
tests/basic/storage/: test_chained_storage.py  test_file_system_storage.py  test_mirrored_storage.py  test_s3_storage.py  test_storage.py
tests/features/: kafka_server.feature
tests/features/actions/: delete_job.feature  predict_checkpoints.feature  process_jobs.feature  register_module.feature  serialize_jobs.feature
tests/steps/: __init__.py  actions.py  basic.py  channels.py  mocked_kafka.py  servers.py
typings/: stringcase.pyi
